<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anti-Bullying App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="blueB">#4C3AF0</color>
    <color name="blueBB">#6E5FF5</color>
    <color name="textR">#FF0000</color>

    <string name="wcme">Welcome to the Anti-Bullying App Choose an option below:</string>
    <string name="qz">Quiz</string>

    <color name="bttn">#0ACC00</color>
    <color name="bttnB">#FA4700</color>

    <string name="title_activity_quiz_starter">QuizStarterActivity</string>
    <string name="wcmeq">Welcome to the quiz screen if you would like to play click \'yes\' if not \'no\'</string>
    <string name="ys">YES</string>
    <string name="no">NO</string>
    <string name="expln">This button will send you to the CEOP site so you can report abuse/bullying</string>
    <string name="title_activity_quiz_first">QuizFirstActivity</string>
    <string name="q1">Who can you tell if you are being bullied?</string>
    <string name="ansLBL">Answers:</string>
    <string name="q1ans1">Anyone you trust</string>
    <string name="q1ans2">A Teacher</string>
    <string name="q1ans3">A Parent</string>
    <string name="q1ans4">Other Family Member</string>
    <string name="title_activity_quiz_failed">QuizFailedActivity</string>
    <string name="failed">You have failed to pass the quiz this time but if you would like to have another try just click on the back arrow in the top left corner!</string>
    <string name="title_activity_quiz_second">QuizSecondActivity</string>
    <string name="q2">What is bullying?</string>
    <string name="q2ans1">something that happens Several Times On Purpose</string>
    <string name="q2ans2">Name Calling</string>
    <string name="q2ans3">Physical Violence</string>
    <string name="q2ans4">All of the Above (#1 and either #2 or #3)</string>
    <string name="crdtsbttn">Credits</string>
    <string name="title_activity_crdts">CrdtsActivity</string>
    <string name="credits">Credits</string>
    <string name="nm1">Louis Hollingworth</string>
    <string name="nm1jb">App Creator</string>
    <string name="nm2">Emily Marriott</string>
    <string name="nm2jb">Some ideas</string>
    <string name="nm3">Ruby Hollingworth</string>
    <string name="nm3jb">\@string/nm2jb</string>
    <string name="updt">Update App!</string>
    <string name="title_activity_quiz_third">QuizThirdActivity</string>
    <string name="q3">What do you do if you are being bullied?</string>
    <string name="q3ans1">Cry!</string>
    <string name="q3ans2">Nothing</string>
    <string name="q3ans3">Report it</string>
    <string name="q3ans4">Commit selfharm</string>
    <string name="title_activity_quiz_fourth">QuizFourthActivity</string>
    <string name="title_activity_quiz_fifth">QuizFifthActivity</string>
    <string name="title_activity_quiz_succeded">QuizSuccededActivity</string>

</resources>
