<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizThirdActivity"
    android:background="@color/blueB" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/blueBB" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/q3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textR"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/ansLBL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/q3ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/q3ans1" />

        <Button
            android:id="@+id/q3ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q3ans3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/q3ans4" />

        <Button
            android:id="@+id/q3ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/q3ans2"
            android:layout_marginTop="16dp"
            android:text="@string/q3ans3" />

        <Button
            android:id="@+id/q3ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/q3ans1"
            android:layout_marginTop="16dp"
            android:text="@string/q3ans2" />

    </RelativeLayout>

</RelativeLayout>
