<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizSecondActivity"
    android:background="@color/blueB" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/blueBB" >

        <TextView
            android:id="@+id/q2txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/q2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textColor="@color/textR" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q2txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="79dp"
            android:text="@string/ansLBL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/q2bttn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/q2ans1" />

        <Button
            android:id="@+id/q2bttn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/q2bttn1"
            android:layout_below="@+id/q2bttn1"
            android:layout_marginTop="19dp"
            android:text="@string/q2ans2" />

        <Button
            android:id="@+id/q2bttn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/q2bttn2"
            android:layout_below="@+id/q2bttn2"
            android:layout_marginTop="19dp"
            android:text="@string/q2ans3" />

        <Button
            android:id="@+id/q2bttn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/q2bttn3"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="19dp"
            android:text="@string/q2ans4" />

    </RelativeLayout>

</RelativeLayout>
